--- a/pages/collection/style.module.css
+++ b/pages/collection/style.module.css
@@ -1,12 +1,3 @@
-.gradientPhoto{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(0deg, white, rgba(255, 255, 255, 0.534));
-}
-.photo{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
+.titleCollection{
+    font-size: 35px;
 }
